# P5

./: plot_adsr.py
samples/: Michael Jackson - Beat It.sco
src/: meson.build
src/instruments/: instrument.cpp  instrument_dumb.cpp  instrument_dumb.h  instrument_fm.cpp  instrument_fm.h  seno.cpp  seno.h
work/: plot_seno.py  seno.orc  seno_data.csv
